# scrapper

./: .gitignore  README.md  scrapper.cabal
php-site-to-scrap/: cart.php  exemplo1.php  loginForm.php  logout.php  somenteLogado.php
src/: Main.hs
